force-app/main/default/objects/Customer_Attribute__c/Customer_Attribute__c.object-meta.xml
<CustomObject>
    <label>Customer Attribute</label>
    <nameField>
        <label>Customer Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Attributes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>