force-app/main/default/objects/Customer_Attribute__c/fields/Attribute_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_2_Code__c</fullName>
    <label>Attribute 2 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>