force-app/main/default/objects/Customer_Attribute__c/fields/Attribute_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Attribute_3_Description__c</fullName>
    <label>Attribute 3 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>