force-app/main/default/objects/Customer_Attribute__c/fields/Broker_Description__c.field-meta.xml
<CustomField>
    <fullName>Broker_Description__c</fullName>
    <label>Broker Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>