force-app/main/default/objects/Customer_Attribute__c/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <label>Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>