force-app/main/default/objects/Customer_Attribute__c/fields/Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Category_Description__c</fullName>
    <label>Category Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>