force-app/main/default/objects/Customer_Attribute__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <label>Channel Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>