force-app/main/default/objects/Customer_Attribute__c/fields/Channel_Description__c.field-meta.xml
<CustomField>
    <fullName>Channel_Description__c</fullName>
    <label>Channel Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>