force-app/main/default/objects/Customer_Attribute__c/fields/Commercial_Account__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Attributes</relationshipLabel>
    <relationshipName>Customer_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>