force-app/main/default/objects/Customer_Attribute__c/fields/Commercial_Account_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Account_ERP_Number__c</fullName>
    <externalId>true</externalId>
    <label>Commercial Account ERP Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>