force-app/main/default/objects/Customer_Attribute__c/fields/Customer_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Affiliation__c</fullName>
    <label>Customer Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>