force-app/main/default/objects/Customer_Attribute__c/fields/Default_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricing__c</fullName>
    <label>Default Pricing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>