force-app/main/default/objects/Customer_Attribute__c/fields/Direct_Pricing_Flag__c.field-meta.xml
<CustomField>
    <fullName>Direct_Pricing_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Pricing Flag</label>
    <type>Checkbox</type>
</CustomField>