force-app/main/default/objects/Customer_Attribute__c/fields/DOT_Foods__c.field-meta.xml
<CustomField>
    <fullName>DOT_Foods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOT Foods</label>
    <type>Checkbox</type>
</CustomField>