force-app/main/default/objects/Customer_Attribute__c/fields/End_Customer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Group_Name__c</fullName>
    <label>End Customer Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>