force-app/main/default/objects/Customer_Attribute__c/fields/Freight_Source__c.field-meta.xml
<CustomField>
    <fullName>Freight_Source__c</fullName>
    <label>Freight Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>