force-app/main/default/objects/Customer_Attribute__c/fields/Key_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer_Name__c</fullName>
    <label>Key Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>