force-app/main/default/objects/Customer_Attribute__c/fields/Large_Customer__c.field-meta.xml
<CustomField>
    <fullName>Large_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large Customer</label>
    <type>Checkbox</type>
</CustomField>