force-app/main/default/objects/Customer_Attribute__c/fields/Master_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Name__c</fullName>
    <label>Master Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>