force-app/main/default/objects/Customer_Attribute__c/fields/New_Customer_Flag__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Flag</label>
    <type>Checkbox</type>
</CustomField>