force-app/main/default/objects/Customer_Attribute__c/fields/Order_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Pricing_Date__c</fullName>
    <label>Order Pricing Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipment Date</fullName>
            </value>
            <value>
                <fullName>Order Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>