force-app/main/default/objects/Customer_Attribute__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Attributes</relationshipLabel>
    <relationshipName>Customer_Attributes1</relationshipName>
    <type>Lookup</type>
</CustomField>