force-app/main/default/objects/Customer_Attribute__c/fields/Payer_Account_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account_ERP_Number__c</fullName>
    <label>Payer Account ERP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>