force-app/main/default/objects/Customer_Attribute__c/fields/Priority_Description__c.field-meta.xml
<CustomField>
    <fullName>Priority_Description__c</fullName>
    <label>Priority Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>