force-app/main/default/objects/Customer_Attribute__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>