force-app/main/default/objects/Customer_Attribute__c/fields/Sales_Region_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Description__c</fullName>
    <label>Sales Region Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>