force-app/main/default/objects/Customer_Attribute__c/fields/Strategic_Level_Description__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Level_Description__c</fullName>
    <label>Strategic Level Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>