force-app/main/default/objects/Customer_Attribute__c/fields/Sub_Category_1_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_1_Code__c</fullName>
    <label>Sub-Category 1 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>