force-app/main/default/objects/Customer_Attribute__c/fields/Sub_Category_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category_1_Description__c</fullName>
    <label>Sub-Category 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>