force-app/main/default/objects/Customer_Attribute__c/fields/Zone_Price_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Price_Code__c</fullName>
    <label>Zone Price Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>